--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
-  "name": "سورس تيبثون - TEPTHON USERBOT",
-  "description": "اللهم صلي وسلم وبارك على سيدنا محمد",
-  "logo": "https://telegra.ph/file/3e452cf6805d6dc732a59.jpg",
+  "name": "سورس الخليفه - 𝗦𝗢𝗨𝗥𝗖𝗘 𝗖𝗔𝗟𝗜𝗣𝗛 ༼༽",
+  "description": "اللهم صل على محمد وآل محمد 🌺",
+  "logo": "https://telegra.ph/file/3e9684f1e7d06abb690a5.jpg",
   "keywords": [
     "plugin",
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/Tepthonee/thetepthon",
+  "repository": "//github.com/ushwlwvw/MUSIC-SPIDER",
   "website": "#TODO",
   "success_url": "#TODO",
   "env": {
